2008-06-17  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkfilechooserdefault.c: remove static integer variables
	which hold the number of members in GtkTargetEntry arrays and use
	G_N_ELEMENTS() directly instead.

2008-06-17  Michael Natterer  <mitch@imendio.com>

	* gtk/gtk.symbols: move some deprecated symbols into
	#ifndef GTK_DISABLE_DEPRECATED.

2008-06-17  Emmanuele Bassi  <ebassi@gnome.org>

	* gtk/gtkfilechooserdefault.c:
	(gtk_file_chooser_default_init),
	(gtk_file_chooser_default_constructor),
	(gtk_file_chooser_default_screen_changed),
	(recent_start_loading): Remove the GtkRecentManager screen
	dance, as it has been deprecated since 2.12. Now we get the
	GtkRecentManager singleton whewn we create the FileChooserDefault
	instance. (Michael Natterer)

2008-06-17  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkoptionmenu.c (gtk_option_menu_position): cast menu's
	toplevel to GtkWindow when passing to gtk_window_set_type_hint().

2008-06-17  Michael Natterer  <mitch@imendio.com>

	* gtk/gtktestutils.c: #undef GTK_DISABLE_DEPRECATED, clean up
	includes a bit.

	* gtk/gtkuimanager.c: #include "gtkwindow.h", it was only pulled
	in via deprecated headers.

2008-06-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 508751 – gnome-terminal crashed with SIGSEGV after keypress

	* gdk/x11/gdkkeys-x11.c (_gdk_keymap_key_is_modifier): Protect
	against XKB being stupid. Reported by Pedro Villavicencio.

2008-06-17  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkplug.c (_gtk_plug_send_delete_event): use g_object_ref()
	and unref() instead of the deprecated gtk_widget_ref() and unref().

2008-06-16  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkentry.c: removed function drag_begin_cb(), which was in
	svn since 2.8 but was never used.

2008-06-16  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkbindings.c (_gtk_binding_entry_add_signall): use
	gtk_binding_entry_clear() instead of gtk_binding_entry_add()